--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Gilda+Display&display=swap">
     <script src="./jquery/jquery.min.js" defer></script>
+    <script src="./bootstrap/js/bootstrap.min.js" defer></script>
     <title>index</title>
 </head>
 
@@ -31,6 +32,8 @@
         </div>
     </main>
     <footer class="footer"></footer>
+
+
 </body>
 
 </html>
