--- a/checkoutNEW.html
+++ b/checkoutNEW.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Gilda+Display&display=swap">
     <link rel="stylesheet" href="css/plugins.css" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- js移至下方 -->
@@ -67,53 +68,41 @@
         <div class="row">
             <!-- 餐點品項置左 -->
             <div class="col-6">
-                <div class="col-md-12 pt-3 m-3">
+                <div class="pt-3 m-3">
                     <legend>所有品項</legend>
                 </div>
-                <div class="row">
-                    <section class="facilties ">
-                        <div class="container">
-                            <div class="col-md-12">
-                                <div class="single-facility">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa et ut, assumenda
-                                        amet,
-                                        reiciendis
-                                        unde nobis odio cupiditate eveniet nisi itaque officiis provident nemo error
-                                        dolore
-                                        expedita
-                                        fugit tempora totam?</p>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
+                <div class="single-facility">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa et ut, assumenda
+                        amet,
+                        reiciendis
+                        unde nobis odio cupiditate eveniet nisi itaque officiis provident nemo error
+                        dolore
+                        expedita
+                        fugit tempora totam?</p>
                 </div>
+
             </div>
             <!-- 總價格置右 -->
             <div class="col-6">
                 <div class="row">
-                    <div class="container">
-                        <section class="facilties ">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <div class="single-facility">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa et ut,
-                                            assumenda
-                                            amet,
-                                            reiciendis
-                                            unde nobis odio cupiditate eveniet nisi itaque officiis provident nemo error
-                                            dolore
-                                            expedita
-                                            fugit tempora totam?</p>
-                                    </div>
-                                    <div class="btn col-md-4">
-                                        <button type="button" id="checkoutBtn" class="btn btn-danger">結帳</button>
-                                        <button type="button" id="memberInfoBtn" class="btn btn-outline-secondary"
-                                            href="signIn.html">尚未登入</button>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </section>
+                    <div class="col-12">
+                        <div class="single-facility">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa et ut,
+                                assumenda
+                                amet,
+                                reiciendis
+                                unde nobis odio cupiditate eveniet nisi itaque officiis provident nemo error
+                                dolore
+                                expedita
+                                fugit tempora totam?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <button type="button" id="checkoutBtn" class="btn btn-danger">結帳</button>
+                        <button type="button" id="memberInfoBtn" class="btn btn-outline-secondary"><a
+                                href="signIn.html">尚未登入</a></button>
                     </div>
                 </div>
             </div>
