--- a/questionaireCheck.html
+++ b/questionaireCheck.html
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col-md-12">
 
-                    <h2>問卷標題</h2>
+                    <legend>問卷標題</legend>
 
                     <div class="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo accusamus alias impedit
@@ -31,11 +31,20 @@
 
                     <div id="QuestionaireInput">
 
-                        <form action=""></form>
+                        <form action="">
+                            <table>
+                                <tr>
+                                    123
+                                </tr>
+                                <td>
+                                    456
+                                </td>
+                            </table>
+                        </form>
 
 
 
-                        <button id=""><a href="index.html">取消</a></button>
+                        <button id=""><a href="questionaire.html">取消</a></button>
                         <button id="">送出</button>
                     </div>
                 </div>
@@ -43,25 +52,7 @@
         </div>
     </main>
     <footer class="footer"></footer>
-    <!-- jQuery -->
-    <script src="bootstrap/jquery-3.6.0.min.js"></script>
-    <script src="bootstrap/jquery-migrate-3.0.0.min.js"></script>
-    <script src="bootstrap/modernizr-2.6.2.min.js"></script>
-    <script src="bootstrap/imagesloaded.pkgd.min.js"></script>
-    <script src="bootstrap/jquery.isotope.v3.0.2.js"></script>
-    <script src="bootstrap/pace.js"></script>
-    <script src="bootstrap/popper.min.js"></script>
-    <script src="bootstrap/bootstrap.min.js"></script>
-    <script src="bootstrap/scrollIt.min.js"></script>
-    <script src="bootstrap/jquery.waypoints.min.js"></script>
-    <script src="bootstrap/owl.carousel.min.js"></script>
-    <script src="bootstrap/jquery.stellar.min.js"></script>
-    <script src="bootstrap/jquery.magnific-popup.js"></script>
-    <script src="bootstrap/select2.js"></script>
-    <script src="bootstrap/datepicker.js"></script>
-    <script src="bootstrap/smooth-scroll.min.js"></script>
-    <!-- 動畫樣式 -->
-    <script src="bootstrap/custom.js"></script>
+
 </body>
 
 </html>
