--- a/questionnaire.html
+++ b/questionnaire.html
@@ -32,12 +32,12 @@
                             dignissimos
                             nam, sint error.</p>
                     </div>
-                    <div id="QuestionaireInput">
-                        <form action="./questionaireCheck.html" method="get">
+                    <div id="QuestionnaireInput">
+                        <form action="./questionnaireCheck.html" method="get">
                             <p>姓名* <input id="name" type="text" placeholder="請輸入姓名" required></p>
-                            <p>年齡* <input id="age" type="text" placeholder="請輸入年齡" required></p>
                             <p>手機* <input id="phone" type="text" placeholder="請輸入手機" required></p>
                             <p>Email* <input id="email" type="email" placeholder="請輸入email" required></p>
+                            <p>年齡* <input id="age" type="text" placeholder="請輸入年齡" required></p>
                             <!-- 選擇題 -->
                             <div class="col">
                                 <div class="row">
@@ -100,7 +100,7 @@
                             </div>
                         </form>
                         <button id=""><a href="index.html">取消</a></button>
-                        <button id="sendBtn" type="submit"><a href="questionaireCheck.html">送出</a></button>
+                        <button id="sendBtn" type="submit"><a href="questionnaireCheck.html">送出</a></button>
                     </div>
                 </div>
             </div>
