--- a/statistics.html
+++ b/statistics.html
@@ -8,6 +8,7 @@
     <link rel=" stylesheet" href="css/plugins.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/plugins/animate.min.css">
+    <link rel="stylesheet" href="css/statistice.css" />
     <script src="./js/chart.js" defer></script>
     <script src="./jquery/jquery.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
