--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Gilda+Display&display=swap">
     <link rel="stylesheet" href="./css/title.css" />
-    <!-- <link rel="stylesheet" href="css/plugins.css" />
-    <link rel="stylesheet" href="css/style.css"> -->
+    <!-- <link rel="stylesheet" href="css/plugins.css" /> -->
+    <link rel="stylesheet" href="css/style.css">
     <script src="./jquery/jquery.min.js" defer></script>
     <script src="./bootstrap/js/bootstrap.min.js" defer></script>
     <script src="./js/function/questionnaireFunction.js" defer></script>
@@ -42,13 +42,10 @@
             </div>
             <div class="row">
                 <div class="body-table">
-
-                    <center>
-                        <div id="showQuestionnaireInfo">
-                            <table id="showQuestionnaireTable" class="questionnaire-table"></table>
-                            <button type="button" class="test"><a href="questionnaire.html">問卷頁</a></button>
-                        </div>
-                    </center>
+                    <div id="showQuestionnaireInfo" class="showQuestionsTable">
+                        <table id="showQuestionnaireTable" class="questionnaire-table"></table>
+                        <button type="button" class="test"><a href="questionnaire.html">問卷頁</a></button>
+                    </div>
                 </div>
 
             </div>
