--- a/questionnaireCheck.html
+++ b/questionnaireCheck.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel=" stylesheet" href="css/plugins.css" />
+    <!-- <link rel=" stylesheet" href="css/plugins.css" /> -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/title.css"> -->
+    <link rel="stylesheet" href="css/questionaire.css" />
     <script src="./jquery/jquery.min.js" defer></script>
+    <script src="./js/function/questionnaireFunction.js" defer></script>
+    <script src="./js/getQuestionsDetails.js" defer></script>
+    <script src="./js/questionnaireSystem.js" defer></script>
     <script src="./bootstrap/js/bootstrap.min.js" defer></script>
-    <script src="./bootstrap/popper.min.js" defer></script>
     <title>questionaire</title>
+
 </head>
 
 <body>
@@ -18,37 +23,43 @@
     <main class="main">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-12">
+                    <div class="pt-3 m-3">
 
-                    <legend id="questionTitle">問卷標題</legend>
-
-                    <div id="questionDetails">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo accusamus alias impedit
-                            architecto
-                            mollitia
-                            sequi non officia eaque labore ipsam. Quibusdam, voluptas excepturi. Maxime corporis cum
-                            dignissimos
-                            nam, sint error.</p>
+                        <legend id="questionTitle">
+                            <!-- ${title} -->
+                        </legend>
                     </div>
+                    <p id="startTime">
+                        <!-- <p>${startTime}</p> -->
+                    </p>
+                    <p>~</p>
+                    <p id="endTime">
+                        <!-- <p>${endTime}</p> -->
+                    </p>
 
+                    <div class="single-facility" id="questionDetails">
+                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo accusamus alias impedit
+                            architecto
+                        </p> -->
+                    </div>
                     <div id="QuestionnaireInput">
-
-                        <form action="./questionnaireCheck.html" method="post">
+                        <form action="" method="get">
                             <p>姓名* <input id="name" type="text" placeholder="請輸入姓名" required></p>
-                            <p>手機* <input id="phone" type="text" placeholder="請輸入手機" value="666" readonly required></p>
+                            <p>手機* <input id="phone" type="text" placeholder="請輸入手機" required></p>
                             <p>Email* <input id="email" type="email" placeholder="請輸入email" required></p>
                             <p>年齡* <input id="age" type="text" placeholder="請輸入年齡" required></p>
                             <div class="col">
                                 <div class="row">
-                                    <p>性別</p>
+                                    <p>性別*</p>
                                 </div>
                                 <div class="row">
                                     <table>
                                         <tr>
                                             <td>
-                                                <div class="form-check">
+                                                <div class="form-check-sex">
                                                     <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
+                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex" checked>
                                                     <label class="form-check-label" for="flexRadioDefaultSex1">
                                                         生理男
                                                     </label>
@@ -59,7 +70,7 @@
                                     <table>
                                         <tr>
                                             <td>
-                                                <div class="form-check">
+                                                <div class="form-check-sex">
                                                     <input class="form-check-sex" type="radio"
                                                         name="flexRadioDefaultSex" id="flexRadioDefaultSex">
                                                     <label class="form-check-label" for="flexRadioDefaultSex2">
@@ -72,9 +83,9 @@
                                     <table>
                                         <tr>
                                             <td>
-                                                <div class="form-check">
+                                                <div class="form-check-sex">
                                                     <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex" checked>
+                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
                                                     <label class="form-check-label" for="flexRadioDefaultSex3">
                                                         其他
                                                     </label>
@@ -86,76 +97,51 @@
                             </div>
                             <!-- 選擇題 -->
                             <div class="col">
-                                <div class="row">
-                                    <p>問題Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </div>
-                                <div class="row">
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                                        id="flexRadioDefault1">
-                                                    <label class="form-check-label" for="flexRadioDefault1">
-                                                        選擇1
-                                                    </label>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                                        id="flexRadioDefault1">
-                                                    <label class="form-check-label" for="flexRadioDefault2">
-                                                        選擇2
-                                                    </label>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                                        id="flexRadioDefault2" checked>
-                                                    <label class="form-check-label" for="flexRadioDefault3">
-                                                        選擇3
-                                                    </label>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                                        id="flexRadioDefault2" checked>
-                                                    <label class="form-check-label" for="flexRadioDefault4">
-                                                        選擇4
-                                                    </label>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </table>
+                                <div id="questionList">
+                                    <div class="row">
+                                        <div class="question">
+                                            <!-- <p>問題描述</p> -->
+                                        </div>
+                                    </div>
+                                    <div class="row" id="qusList">
+                                        <!-- <table>
+                                            <tr>
+                                                <td>
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                            id="flexRadioDefault1">
+                                                        <label class="form-check-label" for="flexRadioDefault1">
+                                                            選擇1
+                                                        </label>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </table> -->
+                                        <!-- <table>
+                                            <tr>
+                                                <td>
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" value=""
+                                                            id="flexCheckDefault">
+                                                        <label class="form-check-label" for="flexCheckDefault">
+                                                            多選
+                                                        </label>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </table> -->
+                                    </div>
                                 </div>
                             </div>
+                            <button id="cancelBtn" class="btn btn-secondary"><a href="index.html">取消</a></button>
+                            <button id="sendBtn" type="submit" class="btn btn-warning">送出</button>
                         </form>
-
-
-
-                        <button id=""><a href="questionnaire.html">取消</a></button>
-                        <button id="">送出</button>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer p-3"></footer>
 
 </body>
 
