--- a/statistics.html
+++ b/statistics.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/plugins/animate.min.css">
     <link rel="stylesheet" href="css/statistice.css" />
-    <script src="./js/chart.js" defer></script>
     <script src="./jquery/jquery.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="./js/function/questionnaireFunction.js" defer></script>
+    <script src="./js/chart.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="./js/getQuestionsDetails.js" defer></script>
     <script src="./js/questionnaireSystem.js" defer></script>
     <script src="./bootstrap/js/bootstrap.min.js" defer></script>
@@ -36,29 +36,29 @@
                                 architecto mollitia</p> -->
                         </div>
                     </div>
+                    <!-- <div class="container"> -->
+                    <!-- <div class="row "> -->
+
+                    <!-- </div> -->
+                    <!-- </div> -->
 
                     <div class="container">
                         <div class="row">
+                            <div class="col-12">
+                                <button class="btn btn-primary" id="btn-change">切換</button>
+                                <button class="btn btn-primary" id="btn-index"><a href="./index.html">返回首頁</a></button>
+                            </div>
                             <div class="col-8 " id="pic">
                                 <!-- 長條圖 -->
                                 <div class="statisticsBar">
-                                    <canvas id="myChart"></canvas>
+                                    <!-- <canvas id="myChart"></canvas> -->
                                 </div>
                                 <!-- 圓餅圖-->
                                 <div class="statisticsDoughnut">
-                                    <canvas id="myChart2"></canvas>
+                                    <!-- <canvas id="myChart2"></canvas> -->
                                 </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary" id="btn-change">切換</button>
-                                </div>
+
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="container">
-
-                        <div class="row ">
-                            <button class="btn-index"><a href="./index.html">返回首頁</a></button>
                         </div>
                     </div>
                     <div id="QuestionaireInput">
