--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="./jquery/jquery.min.js" defer></script>
     <script src="./bootstrap/js/bootstrap.min.js" defer></script>
-    <script src="./js/goPage.js" defer></script>
     <script src="./js/function/questionnaireFunction.js" defer></script>
     <script src="./js/questionnaireSystem.js" defer></script>
+    <script src="./js/goPage.js" defer></script>
     <title>index</title>
 </head>
 
@@ -48,30 +48,26 @@
 
                         <button type="button" class="test"><a href="questionnaire.html">問卷頁</a></button>
 
-                        <!-- <nav aria-label="Page navigation example">
-                            <ul class="pagination">
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav> -->
 
-                        <div id="pageModule">
+
+                        <div class="Pagination" id="inputs">
+                            <ul class="pagination__group">
+                                <li class="pagination__item pre unclick"></li>
+                                <li class="pagination__item active">1</li>
+                                <li class="pagination__item">2</li>
+                                <li class="pagination__item">3</li> -->
+                                <li class="pagination__item unclick">...</li>
+                                <li class="pagination__item">15</li>
+                                <li class="pagination__item next"></li>
+                            </ul>
+                        </div>
+
+                        <!-- <div id="pageModule">
                         </div>
                         <div id="numberPageModule">
                             <label for="numberPage">跳至第</label>
                             <input id="numberPage" type="number" value="1" min="1" max="100">頁
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
