--- a/questionnaire.html
+++ b/questionnaire.html
@@ -10,6 +10,7 @@
     <!-- <link rel="stylesheet" href="css/title.css"> -->
     <link rel="stylesheet" href="css/questionaire.css" />
     <script src="./jquery/jquery.min.js" defer></script>
+    <script src="./js/questionaireCheck.js" defer></script>
     <script src="./js/function/questionnaireFunction.js" defer></script>
     <script src="./js/getQuestionsDetails.js" defer></script>
     <script src="./js/questionnaireSystem.js" defer></script>
@@ -59,7 +60,7 @@
                                             <td>
                                                 <div class="form-check-sex">
                                                     <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex" checked>
+                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
                                                     <label class="form-check-label" for="flexRadioDefaultSex1">
                                                         生理男
                                                     </label>
@@ -72,7 +73,7 @@
                                             <td>
                                                 <div class="form-check-sex">
                                                     <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
+                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex" checked>
                                                     <label class="form-check-label" for="flexRadioDefaultSex2">
                                                         生理女
                                                     </label>
@@ -133,8 +134,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <button id="cancelBtn" class="btn btn-secondary"><a href="index.html">取消</a></button>
-                            <button id="sendBtn" type="submit" class="btn btn-warning">送出</button>
+                            <button id="backBtn" class="btn btn-secondary"><a href="index.html">取消</a></button>
+                            <button id="goCheckBtn" type="button" class="btn btn-warning">送出</button>
                         </form>
                     </div>
                 </div>
