--- a/questionnaireCheck.html
+++ b/questionnaireCheck.html
@@ -10,6 +10,7 @@
     <!-- <link rel="stylesheet" href="css/title.css"> -->
     <link rel="stylesheet" href="css/questionaire.css" />
     <script src="./jquery/jquery.min.js" defer></script>
+    <script src="./js/questionaireCheck.js" defer></script>
     <script src="./js/function/questionnaireFunction.js" defer></script>
     <script src="./js/getQuestionsDetails.js" defer></script>
     <script src="./js/questionnaireSystem.js" defer></script>
@@ -45,10 +46,10 @@
                     </div>
                     <div id="QuestionnaireInput">
                         <form action="" method="get">
-                            <p>姓名* <input id="name" type="text" placeholder="請輸入姓名" required></p>
-                            <p>手機* <input id="phone" type="text" placeholder="請輸入手機" required></p>
-                            <p>Email* <input id="email" type="email" placeholder="請輸入email" required></p>
-                            <p>年齡* <input id="age" type="text" placeholder="請輸入年齡" required></p>
+                            <p>姓名* <input id="name" type="text" placeholder="請輸入姓名" readonly></p>
+                            <p>手機* <input id="phone" type="text" placeholder="請輸入手機" readonly></p>
+                            <p>Email* <input id="email" type="email" placeholder="請輸入email" readonly></p>
+                            <p>年齡* <input id="age" type="text" placeholder="請輸入年齡" readonly></p>
                             <div class="col">
                                 <div class="row">
                                     <p>性別*</p>
@@ -59,7 +60,7 @@
                                             <td>
                                                 <div class="form-check-sex">
                                                     <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex" checked>
+                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
                                                     <label class="form-check-label" for="flexRadioDefaultSex1">
                                                         生理男
                                                     </label>
