--- a/questionnaire.html
+++ b/questionnaire.html
@@ -73,7 +73,7 @@
                                             <td>
                                                 <div class="form-check-sex">
                                                     <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex" checked>
+                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
                                                     <label class="form-check-label" for="flexRadioDefaultSex2">
                                                         生理女
                                                     </label>
