--- a/questionnaire.html
+++ b/questionnaire.html
@@ -10,13 +10,12 @@
     <!-- <link rel="stylesheet" href="css/title.css"> -->
     <link rel="stylesheet" href="css/questionaire.css" />
     <script src="./jquery/jquery.min.js" defer></script>
-    <script src="./js/questionaireCheck.js" defer></script>
+    <script src="./bootstrap/js/bootstrap.min.js" defer></script>
     <script src="./js/function/questionnaireFunction.js" defer></script>
     <script src="./js/getQuestionsDetails.js" defer></script>
     <script src="./js/questionnaireSystem.js" defer></script>
-    <script src="./bootstrap/js/bootstrap.min.js" defer></script>
+    <script src="./js/questionnaireBack.js" defer></script>
     <title>questionaire</title>
-
 </head>
 
 <body>
@@ -59,10 +58,10 @@
                                         <tr>
                                             <td>
                                                 <div class="form-check-sex">
-                                                    <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
+                                                    <input class="form-check-sex" type="radio" name="性別"
+                                                        id="flexRadioDefaultSex_男">
                                                     <label class="form-check-label" for="flexRadioDefaultSex1">
-                                                        生理男
+                                                        男
                                                     </label>
                                                 </div>
                                             </td>
@@ -72,10 +71,10 @@
                                         <tr>
                                             <td>
                                                 <div class="form-check-sex">
-                                                    <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
+                                                    <input class="form-check-sex" type="radio" name="性別"
+                                                        id="flexRadioDefaultSex_女">
                                                     <label class="form-check-label" for="flexRadioDefaultSex2">
-                                                        生理女
+                                                        女
                                                     </label>
                                                 </div>
                                             </td>
@@ -85,8 +84,8 @@
                                         <tr>
                                             <td>
                                                 <div class="form-check-sex">
-                                                    <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
+                                                    <input class="form-check-sex" type="radio" name="性別"
+                                                        id="flexRadioDefaultSex_其他">
                                                     <label class="form-check-label" for="flexRadioDefaultSex3">
                                                         其他
                                                     </label>
