--- a/index.html
+++ b/index.html
@@ -48,26 +48,17 @@
 
                         <button type="button" class="test"><a href="questionnaire.html">問卷頁</a></button>
 
-
-
                         <div class="Pagination" id="inputs">
                             <ul class="pagination__group">
-                                <li class="pagination__item pre unclick"></li>
+                                <!-- <li class="pagination__item pre unclick"></li>
                                 <li class="pagination__item active">1</li>
                                 <li class="pagination__item">2</li>
-                                <li class="pagination__item">3</li> -->
+                                <li class="pagination__item">3</li> 
                                 <li class="pagination__item unclick">...</li>
                                 <li class="pagination__item">15</li>
-                                <li class="pagination__item next"></li>
+                                <li class="pagination__item next"></li> -->
                             </ul>
                         </div>
-
-                        <!-- <div id="pageModule">
-                        </div>
-                        <div id="numberPageModule">
-                            <label for="numberPage">跳至第</label>
-                            <input id="numberPage" type="number" value="1" min="1" max="100">頁
-                        </div> -->
                     </div>
 
                 </div>
