--- a/questionnaireCheck.html
+++ b/questionnaireCheck.html
@@ -10,11 +10,11 @@
     <!-- <link rel="stylesheet" href="css/title.css"> -->
     <link rel="stylesheet" href="css/questionaire.css" />
     <script src="./jquery/jquery.min.js" defer></script>
-    <script src="./js/questionaireCheck.js" defer></script>
+    <script src="./bootstrap/js/bootstrap.min.js" defer></script>
     <script src="./js/function/questionnaireFunction.js" defer></script>
     <script src="./js/getQuestionsDetails.js" defer></script>
     <script src="./js/questionnaireSystem.js" defer></script>
-    <script src="./bootstrap/js/bootstrap.min.js" defer></script>
+    <script src="./js/questionaireCheck.js" defer></script>
     <title>questionaire</title>
 
 </head>
@@ -50,88 +50,24 @@
                             <p>手機* <input id="phone" type="text" placeholder="請輸入手機" readonly></p>
                             <p>Email* <input id="email" type="email" placeholder="請輸入email" readonly></p>
                             <p>年齡* <input id="age" type="text" placeholder="請輸入年齡" readonly></p>
-                            <div class="col">
+                            <!-- <div class="col">
                                 <div class="row">
                                     <p>性別*</p>
                                 </div>
                                 <div class="row">
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                <div class="form-check-sex">
-                                                    <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
-                                                    <label class="form-check-label" for="flexRadioDefaultSex1">
-                                                        生理男
-                                                    </label>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                <div class="form-check-sex">
-                                                    <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
-                                                    <label class="form-check-label" for="flexRadioDefaultSex2">
-                                                        生理女
-                                                    </label>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <table>
-                                        <tr>
-                                            <td>
-                                                <div class="form-check-sex">
-                                                    <input class="form-check-sex" type="radio"
-                                                        name="flexRadioDefaultSex" id="flexRadioDefaultSex">
-                                                    <label class="form-check-label" for="flexRadioDefaultSex3">
-                                                        其他
-                                                    </label>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </table>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- 選擇題 -->
                             <div class="col">
-                                <div id="questionList">
-                                    <div class="row">
-                                        <div class="question">
-                                            <!-- <p>問題描述</p> -->
+                                <div id="qusAndAns">
+                                    <div>
+                                    </div>
+                                    <!-- <div class="row">
+                                        <div class="question">      
                                         </div>
                                     </div>
                                     <div class="row" id="qusList">
-                                        <!-- <table>
-                                            <tr>
-                                                <td>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                                            id="flexRadioDefault1">
-                                                        <label class="form-check-label" for="flexRadioDefault1">
-                                                            選擇1
-                                                        </label>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                        </table> -->
-                                        <!-- <table>
-                                            <tr>
-                                                <td>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" value=""
-                                                            id="flexCheckDefault">
-                                                        <label class="form-check-label" for="flexCheckDefault">
-                                                            多選
-                                                        </label>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                        </table> -->
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <button id="cancelBtn" class="btn btn-secondary"><a href="index.html">取消</a></button>
