--- a/questionnaire.html
+++ b/questionnaire.html
@@ -50,7 +50,7 @@
                                     pattern="09\d{2}\-?\d{3}\-?\d{3}" required></p>
                             <p>Email(必填) <input id="email" type="email" placeholder="請輸入email"
                                     pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required></p>
-                            <p>年齡(必填) <input id="age" type="number" placeholder="請輸入年齡" required></p>
+                            <p>年齡(必填) <input id="age" type="number" placeholder="請填年齡" required></p>
                             <div class="col">
                                 <div class="row">
                                     <p>性別(必填)</p>
