--- a/questionnaireCheck.html
+++ b/questionnaireCheck.html
@@ -14,7 +14,7 @@
     <script src="./js/function/questionnaireFunction.js" defer></script>
     <script src="./js/getQuestionsDetails.js" defer></script>
     <script src="./js/questionnaireSystem.js" defer></script>
-    <script src="./js/questionaireCheck.js" defer></script>
+    <script src="./js/questionnaireCheck.js" defer></script>
     <title>questionaire</title>
 
 </head>
